--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "ky": "^0.20.0",
+    "moment": "^2.26.0",
+    "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
